--- a/style.css
+++ b/style.css
@@ -43,14 +43,17 @@ li {
 }
 
 button {
-  background-color: white; 
-  color: black; 
-  border: 2px solid #008CBA;
+    background-color: #3b82f6;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 8px;
+    cursor: pointer;
 }
 
 button:hover {
-  background-color: #008CBA;
-  color: white;
+    background-color: #2563eb;
+}
 
 label {
     display: block;
